Stop using fixed navbar on status page
When collapsed, the navbar would overlap the majority of the table since
it media-queries to rows.

--- a/app/components/env-status/_env-status.scss
+++ b/app/components/env-status/_env-status.scss
@@ -1,5 +1,5 @@
 .env-status {
-    padding-top: 50px;
+    padding-bottom: 50px;
 
     table.table {
         text-align: center;
