--- a/app/status/_status.scss
+++ b/app/status/_status.scss
@@ -5,8 +5,6 @@ $bg: #eee;
     min-height: 100vh;
     background-color: $bg;
 
-    padding-top: 25px;
-
     ul, table {
         max-width: $maxWidth;
         margin: auto auto;
